--- a/bib/database.bib
+++ b/bib/database.bib
@@ -7,11 +7,49 @@
   author={王庆一}
 }
 
+@misc{Foneone2019时间序列,
+  url={https://blog.csdn.net/foneone/article/details/90141213},
+  title={时间序列模型（ARIMA和ARMA）完整步骤详述},
+  year={2019},
+  author={Foneone}
+}
+
 @phdthesis{李仲蔚2019风力发电企业价值评估研究,
   title={风力发电企业价值评估研究},
   author={李仲蔚},
   school={湖南大学},
   year={2019},
+}
+
+@article{6bab74c1-f2dd-4e24-a833-81f33bedf9b1,
+ language = {en},
+ reference = {He, J., Yang, K., Tang, W. Lu, H., Qin, J., Chen, Y.Y., & Li, X. (2020). The first high-resolution meteorological forcing dataset for land process studies over China. Scientific Data,  7, 25, https://doi.org/10.1038/s41597-020-0369-y.},
+ title = {The first high-resolution meteorological forcing dataset for land process studies over China}
+}
+
+@article{37cab0ac-d066-4fb9-aa9c-1cf50d601096,
+ language = {en},
+ publisher = {Agric. Forest. Meteorol},
+ reference = {Yang, K., He, J.,Tang, W.J., Qin, J., & Cheng, C. (2010). On downward shortwave and longwave radiations over high altitude regions: Observation and modeling in the Tibetan Plateau. Agricultural and Forest Meteorology, 150(1), 38-46.},
+ title = {On downward shortwave and longwave radiations over high altitude regions: Observation and modeling in the Tibetan Plateau},
+ year = {2010}
+}
+
+@inproceedings{haddad2019wind,
+  title={Wind and solar forecasting for renewable energy system using sarima-based model},
+  author={Haddad, Maroua and Nicod, Jean and Mainassara, Yacouba Boubacar and Rabehasaina, Landy and Al Masry, Zeina and P{\'e}ra, Marie},
+  booktitle={International conference on time series and forecasting},
+  year={2019}
+}
+
+@article{alencar2018hybrid,
+  title={Hybrid approach combining SARIMA and neural networks for multi-step ahead wind speed forecasting in Brazil},
+  author={Alencar, David B and Affonso, Carolina M and Oliveira, Roberto CL and Jose Filho, CR},
+  journal={IEEE Access},
+  volume={6},
+  pages={55986--55994},
+  year={2018},
+  publisher={IEEE}
 }
 
 @article{陆冰鉴2020基于,
