--- a/bib/database.bib
+++ b/bib/database.bib
@@ -14,6 +14,62 @@
   author={Foneone}
 }
 
+@inproceedings{朱智慧2010T639,
+  title={T639数值预报产品在南汇站风速预报中的统计释用},
+  author={朱智慧 and 黄宁立},
+  booktitle={长三角科技论坛能源分论坛-长三角气象科技论坛},
+  year={2010},
+}
+
+@article{夏晓玲2019贵州省数值预报风速产品检验及订正,
+  title={贵州省数值预报风速产品检验及订正},
+  author={夏晓玲 and 尚媛媛 and 郑奕},
+  journal={中低纬山地气象},
+  volume={43},
+  number={6},
+  pages={7},
+  year={2019},
+}
+
+@article{朱霄旬2017遗传算法对,
+  title={遗传算法对SVR风速预测模型的多参数优化},
+  author={朱霄旬 and 徐搏超 and 焦宏超 and 韩中合},
+  journal={电机与控制学报},
+  volume={21},
+  number={2},
+  pages={6},
+  year={2017},
+}
+
+@article{2018Hybrid,
+  title={Hybrid Short-Term Wind Speed Prediction Model by COA-SVR Based on Recursive Quantitative Analysis},
+  author={ Pan, C.  and  Tan, Q.  and  Cai, G.  and  Zhang, Z. },
+  journal={Power System Technology},
+  year={2018},
+}
+
+@article{2017Forecast,
+  title={Forecast of Wind Speed and Wing Power Based on Time Series},
+  author={ Sun, R. N.  and F Wang and  University, J. N. },
+  journal={Computer Knowledge and Technology},
+  year={2017},
+}
+
+@article{2021Short,
+  title={Short-term offshore wind speed forecast by seasonal ARIMA - A comparison against GRU and LSTM},
+  author={ Xl, A  and  Zi, L. B.  and  Zf, C },
+  journal={Energy},
+  volume={227},
+  year={2021},
+}
+
+@inproceedings{Shivani2019A,
+  title={A Comparative Study of ARIMA and RNN for Short Term Wind Speed Forecasting},
+  author={Shivani and  Sandhu, K. S.  and  Nair, Anil Ramachandran },
+  booktitle={2019 10th International Conference on Computing, Communication and Networking Technologies (ICCCNT)},
+  year={2019},
+}
+
 @phdthesis{李仲蔚2019风力发电企业价值评估研究,
   title={风力发电企业价值评估研究},
   author={李仲蔚},
