--- a/bib/database.bib
+++ b/bib/database.bib
@@ -191,4 +191,45 @@
   year={2019},
 }
 
+@article{huang1998empirical,
+  title={The empirical mode decomposition and the Hilbert spectrum for nonlinear and non-stationary time series analysis},
+  author={Huang, Norden E and Shen, Zheng and Long, Steven R and Wu, Manli C and Shih, Hsing H and Zheng, Quanan and Yen, Nai-Chyuan and Tung, Chi Chao and Liu, Henry H},
+  journal={Proceedings of the Royal Society of London. Series A: mathematical, physical and engineering sciences},
+  volume={454},
+  number={1971},
+  pages={903--995},
+  year={1998},
+  publisher={The Royal Society}
+}
+
+@article{wu2009ensemble,
+  title={Ensemble empirical mode decomposition: a noise-assisted data analysis method},
+  author={Wu, Zhaohua and Huang, Norden E},
+  journal={Advances in adaptive data analysis},
+  volume={1},
+  number={01},
+  pages={1--41},
+  year={2009},
+  publisher={World Scientific}
+}
+
+@inproceedings{torres2011complete,
+  title={A complete ensemble empirical mode decomposition with adaptive noise},
+  author={Torres, Mar{\'\i}a E and Colominas, Marcelo A and Schlotthauer, Gaston and Flandrin, Patrick},
+  booktitle={2011 IEEE international conference on acoustics, speech and signal processing (ICASSP)},
+  pages={4144--4147},
+  year={2011},
+  organization={IEEE}
+}
+
+@article{colominas2014improved,
+  title={Improved complete ensemble EMD: A suitable tool for biomedical signal processing},
+  author={Colominas, Marcelo A and Schlotthauer, Gast{\'o}n and Torres, Mar{\'\i}a E},
+  journal={Biomedical Signal Processing and Control},
+  volume={14},
+  pages={19--29},
+  year={2014},
+  publisher={Elsevier}
+}
+
 @Comment{jabref-meta: databaseType:bibtex;}
