--- a/bib/database.bib
+++ b/bib/database.bib
@@ -232,4 +232,11 @@
   publisher={Elsevier}
 }
 
+@article{chung2014empirical,
+  title={Empirical evaluation of gated recurrent neural networks on sequence modeling},
+  author={Chung, Junyoung and Gulcehre, Caglar and Cho, KyungHyun and Bengio, Yoshua},
+  journal={arXiv preprint arXiv:1412.3555},
+  year={2014}
+}
+
 @Comment{jabref-meta: databaseType:bibtex;}
