--- a/bib/database.bib
+++ b/bib/database.bib
@@ -239,4 +239,102 @@
   year={2014}
 }
 
+@article{jolliffe2016principal,
+  title={Principal component analysis: a review and recent developments},
+  author={Jolliffe, Ian T and Cadima, Jorge},
+  journal={Philosophical Transactions of the Royal Society A: Mathematical, Physical and Engineering Sciences},
+  volume={374},
+  number={2065},
+  pages={20150202},
+  year={2016},
+  publisher={The Royal Society Publishing}
+}
+
+@article{ruder2016overview,
+  title={An overview of gradient descent optimization algorithms},
+  author={Ruder, Sebastian},
+  journal={arXiv preprint arXiv:1609.04747},
+  year={2016}
+}
+
+@article{qian1999momentum,
+  title={On the momentum term in gradient descent learning algorithms},
+  author={Qian, Ning},
+  journal={Neural networks},
+  volume={12},
+  number={1},
+  pages={145--151},
+  year={1999},
+  publisher={Elsevier}
+}
+
+@inproceedings{nesterov1983method,
+  title={A method for unconstrained convex minimization problem with the rate of convergence O (1/k\^{} 2)},
+  author={Nesterov, Yurii},
+  booktitle={Doklady an ussr},
+  volume={269},
+  pages={543--547},
+  year={1983}
+}
+
+@inproceedings{bengio2013advances,
+  title={Advances in optimizing recurrent networks},
+  author={Bengio, Yoshua and Boulanger-Lewandowski, Nicolas and Pascanu, Razvan},
+  booktitle={2013 IEEE international conference on acoustics, speech and signal processing},
+  pages={8624--8628},
+  year={2013},
+  organization={IEEE}
+}
+
+@incollection{huber1992robust,
+  title={Robust estimation of a location parameter},
+  author={Huber, Peter J},
+  booktitle={Breakthroughs in statistics},
+  pages={492--518},
+  year={1992},
+  publisher={Springer}
+}
+
+@article{kingma2014adam,
+  title={Adam: A method for stochastic optimization},
+  author={Kingma, Diederik P and Ba, Jimmy},
+  journal={arXiv preprint arXiv:1412.6980},
+  year={2014}
+}
+
+@article{dozat2016incorporating,
+  title={Incorporating nesterov momentum into adam},
+  author={Dozat, Timothy},
+  year={2016}
+}
+
+@article{rumelhart1986learning,
+  title={Learning representations by back-propagating errors},
+  author={Rumelhart, David E and Hinton, Geoffrey E and Williams, Ronald J},
+  journal={nature},
+  volume={323},
+  number={6088},
+  pages={533--536},
+  year={1986},
+  publisher={Nature Publishing Group}
+}
+
+@article{cho2014learning,
+  title={Learning phrase representations using RNN encoder-decoder for statistical machine translation},
+  author={Cho, Kyunghyun and Van Merri{\"e}nboer, Bart and Gulcehre, Caglar and Bahdanau, Dzmitry and Bougares, Fethi and Schwenk, Holger and Bengio, Yoshua},
+  journal={arXiv preprint arXiv:1406.1078},
+  year={2014}
+}
+
+@article{hochreiter1997long,
+  title={Long short-term memory},
+  author={Hochreiter, Sepp and Schmidhuber, J{\"u}rgen},
+  journal={Neural computation},
+  volume={9},
+  number={8},
+  pages={1735--1780},
+  year={1997},
+  publisher={MIT Press}
+}
+
 @Comment{jabref-meta: databaseType:bibtex;}
