--- a/bib/database.bib
+++ b/bib/database.bib
@@ -337,4 +337,11 @@
   publisher={MIT Press}
 }
 
+@article{hendrycks2016gaussian,
+  title={Gaussian error linear units (gelus)},
+  author={Hendrycks, Dan and Gimpel, Kevin},
+  journal={arXiv preprint arXiv:1606.08415},
+  year={2016}
+}
+
 @Comment{jabref-meta: databaseType:bibtex;}
