--- a/code/4-All-Feature-Prophet-GRU.ipynb
+++ b/code/4-All-Feature-Prophet-GRU.ipynb
@@ -385,7 +385,7 @@
     "pca_list=[]\n",
     "data_list=[]\n",
     "model_list=[]\n",
-    "for weather_feature_index in range(len(weather_features)-1, len(weather_features)):\n",
+    "for weather_feature_index in range(len(weather_features)):\n",
     "    modelfname=modelname+ '_' + weather_features[weather_feature_index]\n",
     "    scaler = StandardScaler()\n",
     "    scaler_list.append(scaler)\n",
@@ -470,7 +470,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "y_train = y.to_numpy()[:,-1]\n",
+    "y_train = y.to_numpy()\n",
     "y_train.shape"
    ]
   },
@@ -508,7 +508,7 @@
     "    model.compile(loss = keras.losses.Huber(), optimizer = keras.optimizers.Nadam(0.001))\n",
     "    model.summary()\n",
     "    keras.utils.plot_model(model, to_file=modelname+'model_plot.pdf', show_shapes=True, show_layer_names=True)\n",
-    "    history=model.fit(gru_output, y_train.reshape(-1,1,1), epochs = 500, verbose = 1, shuffle = True, callbacks = [es_callback])\n",
+    "    history=model.fit(gru_output, y_train.reshape(-1,1,1), epochs = 5000, verbose = 1, shuffle = True, callbacks = [es_callback])\n",
     "    import matplotlib.pyplot as plt\n",
     "    %matplotlib notebook\n",
     "    plt.rcParams['font.size']=64\n",
