--- a/ppt/ppt.tex
+++ b/ppt/ppt.tex
@@ -87,7 +87,7 @@
     \item $g(t)$表示的是趋势分量，代表时间序列数据在非周期性规律中的变化趋势。
     \item $s(t)$表示周和日、年的季节性分量。
     \item $h(t)$表示节假日项，此处和风速预测无关。
-    \item $\epsilon_{t}$为剩余项，表示噪声分量，其服从高斯白噪声分布。
+    \item $\epsilon_{t}$为残差，表示噪声分量，其服从高斯白噪声分布。
   \end{itemize}
   \rightline{}
   Prophet的预测速度快，提供了完全自动化的时间序列预测功能，对异常值和时间序列中
@@ -542,8 +542,8 @@ UTC 2017年1月1日0时-2018年12月30日21时（5832条）
   \frametitle{创新点}
   \begin{enumerate}
     \item 从数值预报、大气动力学获得灵感，多气象要素联合预测。
-    \item 使用最新信号分解技术ICEEMDAN（2014年）来特征分解。
-    \item 采用Facebook推出的新型时间序列框架 Prophet（2017年）与最新循环神
+    \item 使用最新信号分解技术ICEEMDAN（2014年）来特征分解，
+    采用Facebook推出的新型时间序列框架 Prophet（2017年）与最新循环神
     经网络 GRU 模型（2014年）组合预测。
     \item 从支持向量回归机获得灵感，使用了RBF核PCA升维。
     \item 将GELU激活函数（2016年）以及Nadam优化器（2016年）和Huber损失函
@@ -557,13 +557,12 @@ UTC 2017年1月1日0时-2018年12月30日21时（5832条）
   因为论文时间紧迫，展望未来，本次论文写作过程也存在着许多遗憾的点，
   如果有机会的话可以在后续进一步研究过程中完成：
   \begin{itemize}
-    \item 本次建模过程只选择了两年跨度的时间序列数据，没有将更大尺度的数据进行处理，对于大尺度数据而言
-    模型应该能进一步取得更好的效果。
-    \item 由于Prophet搜寻最优超参数所耗费时间过长，本文只对风速原始时间序列数据这一个模型进行了搜索最
-    优超参数的过程，对于其他特征时间序列本文则直接沿用了风速原始时间序列数据的最优超参数。如果对每个特征的时间序列
-    Prophet模型都加以优化，预计会产生更好的效果。
-    \item 本文只选择了甘肃酒泉的一个真实风力发电厂附近的地点进行短期风速的预测，当然笔者坚信在其他
-    地点本模型也会产生很好的效果，后续有待验证这一点。
+    \item 本次建模过程只选择了两年跨度的时间序列数据。
+    \item 只对风速原始时间序列数据这一个模型进行了搜索最
+    优超参数的过程，对于其他特征时间序列本文则直接沿用了风速原始时间序列数据的最优超参数。
+    \item 本文只选择了甘肃酒泉的一个真实风力发电厂附近的地点进行短期风速的预测。
+    \item 没有探究模型中所用神经网络层数进一步加深的情况。
+    \item 可尝试更多各种不同新型模型，用各种不同方法组合起来。
   \end{itemize}
 \end{frame}
 
