--- a/bib/database.bib
+++ b/bib/database.bib
@@ -79,14 +79,20 @@
 
 @article{6bab74c1-f2dd-4e24-a833-81f33bedf9b1,
  language = {en},
- reference = {He, J., Yang, K., Tang, W. Lu, H., Qin, J., Chen, Y.Y., & Li, X. (2020). The first high-resolution meteorological forcing dataset for land process studies over China. Scientific Data,  7, 25, https://doi.org/10.1038/s41597-020-0369-y.},
+ author = {He, J. and Yang, K. and Tang, W.J. and Lu H. and Qin, J. and Chen, Y.Y. and Li, X.},
+ journal = {Scientific Data},
+ volume = {7},
+ pages = {25},
  title = {The first high-resolution meteorological forcing dataset for land process studies over China}
 }
 
 @article{37cab0ac-d066-4fb9-aa9c-1cf50d601096,
  language = {en},
- publisher = {Agric. Forest. Meteorol},
- reference = {Yang, K., He, J.,Tang, W.J., Qin, J., & Cheng, C. (2010). On downward shortwave and longwave radiations over high altitude regions: Observation and modeling in the Tibetan Plateau. Agricultural and Forest Meteorology, 150(1), 38-46.},
+ publisher = {Agricultural and Forest Meteorology},
+ author = {Yang, K. He, J. and Tang, W.J. and Qin, J. and Chen, C.},
+ volume = {150},
+ number = {1},
+ pages = {38-46},
  title = {On downward shortwave and longwave radiations over high altitude regions: Observation and modeling in the Tibetan Plateau},
  year = {2010}
 }
